--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,6 @@ dist
 *~
 *.aux
 *.bak
-*.bbl
 *.blg
 *.dvi
 *.glo
@@ -28,5 +27,5 @@ dist
 *.xdv
 *.pdf
 *.synctex
-*.synctex
 wzf_main.synctex
+wzf_main.pdf
